--- a/Animation/Base.lproj/Main.storyboard
+++ b/Animation/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1s5-QL-n13">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -61,53 +61,19 @@
                                     <constraint firstAttribute="width" constant="203" id="7WT-Eh-HIK"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Txr-nh-mfX" userLabel="lan">
-                                <rect key="frame" x="10" y="451" width="285" height="100"/>
-                                <color key="backgroundColor" red="0.1189229498" green="0.42579535159999998" blue="0.60284485480000005" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="gof-NH-V4u"/>
-                                    <constraint firstAttribute="width" constant="100" id="lDc-Ek-uPg"/>
-                                    <constraint firstAttribute="width" secondItem="Txr-nh-mfX" secondAttribute="height" multiplier="57:20" id="vlf-5l-F7D"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="lDc-Ek-uPg"/>
-                                    </mask>
-                                </variation>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g6x-J7-q90" userLabel="hong">
-                                <rect key="frame" x="305" y="451" width="285" height="100"/>
-                                <color key="backgroundColor" red="0.75294117650000003" green="0.24079872499999999" blue="0.51240786790000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="6TW-L0-41z"/>
-                                    <constraint firstAttribute="width" secondItem="g6x-J7-q90" secondAttribute="height" multiplier="57:20" id="KwR-MS-1qJ"/>
-                                    <constraint firstAttribute="width" constant="100" id="R7o-MZ-ukM"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="R7o-MZ-ukM"/>
-                                    </mask>
-                                </variation>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Icq-l0-8en" firstAttribute="leading" secondItem="3yM-T9-A1n" secondAttribute="leading" id="19L-72-UxE"/>
-                            <constraint firstItem="Txr-nh-mfX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="46A-cZ-7Kb"/>
-                            <constraint firstItem="Txr-nh-mfX" firstAttribute="width" secondItem="g6x-J7-q90" secondAttribute="width" id="7q4-d8-bcB"/>
                             <constraint firstItem="Icq-l0-8en" firstAttribute="width" secondItem="3yM-T9-A1n" secondAttribute="width" id="87p-KY-me3"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Txr-nh-mfX" secondAttribute="bottom" constant="49" id="B6H-p5-3hi"/>
                             <constraint firstItem="3Oi-Rl-P6M" firstAttribute="top" secondItem="cU2-sF-WbL" secondAttribute="bottom" constant="8" id="DYd-ra-H94"/>
                             <constraint firstItem="hxX-DC-4XX" firstAttribute="leading" secondItem="3Oi-Rl-P6M" secondAttribute="trailing" constant="-21" id="FWA-ze-WEb"/>
                             <constraint firstItem="Icq-l0-8en" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="300" id="G3X-sy-Hb7"/>
                             <constraint firstItem="hxX-DC-4XX" firstAttribute="top" secondItem="cU2-sF-WbL" secondAttribute="top" constant="-22" id="Mot-hz-RlK"/>
-                            <constraint firstItem="g6x-J7-q90" firstAttribute="leading" secondItem="Txr-nh-mfX" secondAttribute="trailing" constant="10" id="QQy-71-qbi"/>
                             <constraint firstItem="3Oi-Rl-P6M" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="ZuF-aN-a3Y"/>
                             <constraint firstItem="cU2-sF-WbL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="fma-Qh-0mc"/>
                             <constraint firstItem="cU2-sF-WbL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="60" id="iwB-pL-RZo"/>
-                            <constraint firstItem="Txr-nh-mfX" firstAttribute="top" secondItem="g6x-J7-q90" secondAttribute="top" id="m7f-po-uDH"/>
                             <constraint firstItem="Icq-l0-8en" firstAttribute="centerY" secondItem="3yM-T9-A1n" secondAttribute="centerY" constant="-50" id="nLh-Hg-nbz"/>
-                            <constraint firstAttribute="trailing" secondItem="g6x-J7-q90" secondAttribute="trailing" constant="10" id="nub-J8-g9Z"/>
                             <constraint firstAttribute="centerX" secondItem="Icq-l0-8en" secondAttribute="centerX" id="p2c-XM-Buz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="lEk-c9-aFi" secondAttribute="trailing" id="rOX-RT-hP8"/>
                             <constraint firstItem="hxX-DC-4XX" firstAttribute="top" secondItem="lEk-c9-aFi" secondAttribute="top" constant="-59" id="wS7-48-iYC"/>
@@ -134,7 +100,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Fod-Oq-mBy"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="JQe-ir-InU">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aUN-Bx-qUB" userLabel="Info">
@@ -142,9 +108,9 @@
                                 <color key="backgroundColor" red="0.1189229498" green="0.42579535159999998" blue="0.60284485480000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="6xA-3u-wbe"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="250" id="gYG-7W-0ED"/>
+                                    <constraint firstAttribute="height" constant="250" id="gYG-7W-0ED"/>
                                     <constraint firstAttribute="height" constant="100" id="kbv-wF-gpw">
-                                        <variation key="heightClass=compact" constant="296"/>
+                                        <variation key="heightClass=compact" constant="250"/>
                                         <variation key="heightClass=regular-widthClass=compact" constant="253"/>
                                     </constraint>
                                 </constraints>
@@ -157,7 +123,7 @@
                                 <variation key="heightClass=compact">
                                     <mask key="constraints">
                                         <include reference="6xA-3u-wbe"/>
-                                        <include reference="gYG-7W-0ED"/>
+                                        <exclude reference="gYG-7W-0ED"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -320,6 +286,7 @@
                         </variation>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mn5-A5-HU9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
