--- a/Animation/Base.lproj/Main.storyboard
+++ b/Animation/Base.lproj/Main.storyboard
@@ -19,20 +19,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="userName" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Icq-l0-8en">
-                                <rect key="frame" x="179" y="320" width="243" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="243" id="ion-yu-GzM"/>
-                                    <constraint firstAttribute="height" constant="30" id="zjo-ce-MIY"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3yM-T9-A1n">
-                                <rect key="frame" x="179" y="370" width="243" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="cU2-sF-WbL">
                                 <rect key="frame" x="60" y="70" width="80" height="80"/>
                                 <constraints>
@@ -61,23 +47,82 @@
                                     <constraint firstAttribute="width" constant="203" id="7WT-Eh-HIK"/>
                                 </constraints>
                             </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="userName" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Icq-l0-8en">
+                                <rect key="frame" x="179" y="320" width="243" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="243" id="ion-yu-GzM"/>
+                                    <constraint firstAttribute="height" constant="30" id="zjo-ce-MIY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3yM-T9-A1n">
+                                <rect key="frame" x="179" y="370" width="243" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NyM-mP-vzr" customClass="MyImageView" customModule="Animation" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="wgy-jQ-SGR"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="wgy-jQ-SGR"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="wgy-jQ-SGR"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Icq-l0-8en" firstAttribute="leading" secondItem="3yM-T9-A1n" secondAttribute="leading" id="19L-72-UxE"/>
                             <constraint firstItem="Icq-l0-8en" firstAttribute="width" secondItem="3yM-T9-A1n" secondAttribute="width" id="87p-KY-me3"/>
+                            <constraint firstAttribute="trailing" secondItem="NyM-mP-vzr" secondAttribute="trailing" id="8iF-uc-qCd"/>
                             <constraint firstItem="3Oi-Rl-P6M" firstAttribute="top" secondItem="cU2-sF-WbL" secondAttribute="bottom" constant="8" id="DYd-ra-H94"/>
                             <constraint firstItem="hxX-DC-4XX" firstAttribute="leading" secondItem="3Oi-Rl-P6M" secondAttribute="trailing" constant="-21" id="FWA-ze-WEb"/>
                             <constraint firstItem="Icq-l0-8en" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="300" id="G3X-sy-Hb7"/>
                             <constraint firstItem="hxX-DC-4XX" firstAttribute="top" secondItem="cU2-sF-WbL" secondAttribute="top" constant="-22" id="Mot-hz-RlK"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NyM-mP-vzr" secondAttribute="bottom" constant="10" id="SKs-si-SWp"/>
                             <constraint firstItem="3Oi-Rl-P6M" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="ZuF-aN-a3Y"/>
+                            <constraint firstItem="NyM-mP-vzr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="afN-LF-021"/>
                             <constraint firstItem="cU2-sF-WbL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="fma-Qh-0mc"/>
+                            <constraint firstItem="NyM-mP-vzr" firstAttribute="top" secondItem="3yM-T9-A1n" secondAttribute="bottom" constant="15" id="g9l-Cb-pdC">
+                                <variation key="heightClass=regular-widthClass=compact" constant="30"/>
+                            </constraint>
                             <constraint firstItem="cU2-sF-WbL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="60" id="iwB-pL-RZo"/>
                             <constraint firstItem="Icq-l0-8en" firstAttribute="centerY" secondItem="3yM-T9-A1n" secondAttribute="centerY" constant="-50" id="nLh-Hg-nbz"/>
                             <constraint firstAttribute="centerX" secondItem="Icq-l0-8en" secondAttribute="centerX" id="p2c-XM-Buz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="lEk-c9-aFi" secondAttribute="trailing" id="rOX-RT-hP8"/>
                             <constraint firstItem="hxX-DC-4XX" firstAttribute="top" secondItem="lEk-c9-aFi" secondAttribute="top" constant="-59" id="wS7-48-iYC"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="NyM-mP-vzr"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="8iF-uc-qCd"/>
+                                <exclude reference="afN-LF-021"/>
+                                <exclude reference="g9l-Cb-pdC"/>
+                                <exclude reference="SKs-si-SWp"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="NyM-mP-vzr"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="G3X-sy-Hb7"/>
+                                <include reference="8iF-uc-qCd"/>
+                                <include reference="afN-LF-021"/>
+                                <include reference="g9l-Cb-pdC"/>
+                                <include reference="SKs-si-SWp"/>
+                            </mask>
+                        </variation>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
